<resources>
    <string name="app_name">BringMyUmbrella</string>
    <string name="action_settings">Settings</string>
    <string name="youre_safe_today">You\'re safe today! Let your umbrella rest at home.</string>
    <string name="sunny_day">Sunny day</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="after_tomorrow">After</string>
    <string name="error_loading">Error loading weather… Are you online?</string>
    <string name="you_should_bring">Don\'t forget to take your umbrella with you today!</string>
    <string name="clear_day">Clear day</string>
    <string name="clear_night">Clear night</string>
    <string name="mist">Mist</string>
    <string name="cloudy">Cloudy</string>
    <string name="rain">Rain</string>
    <string name="thunderstorm">Thunderstorms</string>
    <string name="snow">Snow</string>
    <string name="celsius_units">ºC</string>
    <string name="fahrenheit_units">ºF</string>
    <string name="no_info_available">No information available</string>
    <string name="settings">Settings</string>
    <string name="location_settings">Location</string>
    <string name="manual_location_settings">Use the following location as default:</string>
    <string name="general_settings">General Settings</string>
    <string name="use_fahrenheit">Use fahrenheit instead of celsius.</string>
    <string name="remind_me">Remind me to take my umbrella in the morning.</string>
    <string name="rate_app">Rate this app</string>
    <string name="rate_app_text">If you like this app, remember to give it some stars!</string>
    <string name="rate_app_btn">YES!</string>
    <string name="OK">Ok</string>
    <string name="location_popup_title">Location</string>
    <string name="location_popup_text">Please enter the location you wish to use:</string>
    <string name="time_popup_title">Reminder time</string>
    <string name="notification_text">Don\'t forget to take your umbrella with you today!</string>
</resources>
